# khuneo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
astgen/: CMakeLists.txt
astgen/include/kh-astgen/: lexer.h
astgen/src/: lexer.c
core/: CMakeLists.txt
core/include/kh-core/: alloc.h  defs.h  impldec.h  mem.h  str.h
core/src/: alloc.c  mem.c  str.c
include/kh/: kh.h  khuneo.h
include/khuneo/: khuneo.hpp  parser.hpp  string_literals.hpp
kh-compiler/include/khuneo/compiler/: lexer.hpp  parser.hpp
kh-core/: CMakeLists.txt
kh-core/include/khuneo/core/: chunk_list.hpp  contiguous_list.hpp  defs.hpp  flat_tree.hpp  metapp.hpp  utf8.hpp  xxhash.hpp
kh-extra/: CMakeLists.txt
kh-extra/include/khuneo/extra/: kh_as_string.hpp
kh/include/khuneo/: khuneo.hpp
kh/src/: khuneo.cpp
kh_compiler/: CMakeLists.txt
kh_compiler/include/kh_compiler/: lexer.hpp
kh_compiler/include/khuneo/compiler/: ast.hpp  bc_compiler.hpp  info.hpp  lang_impl.hpp  lexer.hpp  parser.hpp
kh_compiler/include/khuneo/kh_compiler/: lexer.hpp
kh_compiler/src/: ast.cpp  bc_compiler.cpp  info.cpp  lang_impl.cpp  lexer.cpp  parser.cpp
kh_core/: CMakeLists.txt
kh_core/include/kh_core/: defs.hpp  string_literal.hpp  xxhash.hpp
kh_core/include/khuneo/: defs.hpp  filo_stack.hpp  kh_hashmap.hpp  string_literals.hpp  xxhash.hpp
kh_core/include/khuneo/core/: chunk_list.hpp  contiguous_list.hpp  defs.hpp  dynamic_array.hpp  metapp.hpp  utf8.hpp  xxhash.hpp
kh_core/include/khuneo/kh_core/: utf8.hpp  xxhash.hpp
kh_core/src/: xxhash.cpp
kh_extra/: CMakeLists.txt
kh_extra/include/extra/: msg_stringify.hpp
kh_extra/include/khuneo/extra/: kh_as_string.hpp  msg_format.hpp
kh_runtime/: CMakeLists.txt
kh_runtime/include/khuneo/: kh_module.hpp  vm.hpp
kh_runtime/include/khuneo/runtime/: vm.hpp
kh_runtime/src/: kh_module.cpp  vm.cpp
khuneo-assembler/: CMakeLists.txt
khuneo-assembler-dotnet/: khuneo-assembler-dotnet.sln
khuneo-assembler-dotnet/khuneo-assembler-cli/: Program.cs  khuneo-assembler-cli.csproj
khuneo-assembler-dotnet/khuneo-assembler-core/: OpCode.cs  assembler.cs  hash.cs  khuneo-assembler-core.projitems  khuneo-assembler-core.shproj  logging.cs
khuneo-assembler-dotnet/khuneo-assembler-core/extensions/: Strings.cs
khuneo-assembler-dotnet/khuneo-assembler-core/opcodes/: op_inti.cs  op_nop.cs
khuneo-assembler-dotnet/khuneo-assembler-gui/: Form1.Designer.cs  Form1.cs  Program.cs  app_config.cs  form_main.Designer.cs  form_main.cs  form_main.resx  khuneo-assembler-gui.csproj
khuneo-assembler-dotnet/khuneo-assembler-gui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
khuneo-assembler-dotnet/khuneo-assembler-gui/extensions/: RichTextBox.cs
khuneo-assembler-dotnet/khuneo-assembler-gui/forms/: form_main.Designer.cs  form_main.cs  output_log.Designer.cs  output_log.cs
khuneo-astgen/: CMakeLists.txt
khuneo-astgen/include/kh-astgen/: common.h  lexer.h  parser.h
khuneo-astgen/kh-astgen/: lexer.c  lexer.h
khuneo-astgen/src/: lexer.c  lexers.c  lexers.h  parser.c  parsers.c  parsers.h
khuneo-core/: CMakeLists.txt
khuneo-core/include/kh-core/: identifier_encode.h  identifier_encoding.h  math.h  refobj.h  types.h  utf8.h  utilities.h
khuneo-core/src/: identifier_encode.c  identifier_encoding.c  math.c  refobj.c  utf8.c
khuneo-extra/: CMakeLists.txt
khuneo-extra/include/kh-extra/: helper.h
khuneo-extra/include/kh-extra/astgen/: lexer.h  parser.h
khuneo-extra/src/: lexer.c  parser.c
khuneo-lang/: CMakeLists.txt  khuneo.hpp  khuneo_data.hpp  khuneo_def.hpp  khuneo_hash.hpp  khuneo_parameters.hpp  khuneo_state.hpp  khuneo_vm.hpp  khuneo_vm_context.hpp  khuneo_vm_ops.hpp
khuneo-lang/opcodes/: khuneo_op_inti.hpp  khuneo_opcodes.hpp
khuneo-lang/vm/: khuneo_vm.hpp  khuneo_vm_context.hpp  khuneo_vm_ops.hpp
khuneo-lang/vm/opcodes/: khuneo_op_inti.hpp  khuneo_op_mov.hpp  khuneo_op_nop.hpp  khuneo_opcodes.hpp
khuneo-runtime/: CMakeLists.txt  khuneo_runtime.cpp
src/: kh.c  khuneo.c  khuneo.cpp  lexer.cpp  parser.cpp  string_literals.cpp
test/: CMakeLists.txt  helper.h  main.c  main.cpp
test/astgen/: astgen.c  astgen.h
test/core/: core.c  core.h
